--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 
 <body>
 
+  <section id="content">
+    <header>US GDP</header>
+  </section>
+
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="script.js"></script>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
 </html>
