--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <section id="content">
-    <header>US GDP</header>
+    <header id="title">US GDP</header>
   </section>
 
   <script src="https://d3js.org/d3.v5.min.js"></script>
