--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <section id="content">
     <header id="title">US GDP</header>
-    <!-- <div id="tooltip"></div> -->
+    <div id="svg-container"></div>
   </section>
 
   <script src="https://d3js.org/d3.v5.min.js"></script>
